# yahtzee

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  dice.cpp  dice.h  game.cpp  game.h  main.cpp  scorecard.cpp  scorecard.h
tests/: test_game.cpp
